--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     >
       <div id="imageContainer" class="mb-4"></div>
       <p id="question" class="text-lg leading-relaxed text-center">
-        Chargement…
+        Chargement….
       </p>
       <div id="options" class="mt-4 space-y-2 w-full"></div>
       <p id="explanation" class="mt-4 text-gray-400 text-sm text-center"></p>
