--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quiz NSE4</title>
+  <title>Quiz FortiGate</title>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-900 text-white min-h-screen flex items-center justify-center px-4">
   <div class="w-full max-w-3xl py-10">
     <div class="bg-gray-900 border border-gray-700 rounded-xl shadow-lg p-6">
-      <h1 class="text-4xl font-extrabold text-center mb-8 text-blue-400">Quiz NSE4</h1>
+      <h1 class="text-4xl font-extrabold text-center mb-8 text-blue-400">Quiz FortiGate</h1>
       <div id="quiz"></div>
 
       <div class="flex justify-center mt-10">
